Set theme jekyll-theme-hacker

--- a/_config.yml
+++ b/_config.yml
@@ -21,3 +21,5 @@ defaults:
 #url: "http://localhost:4000/" # the base hostname & protocol for your site
 plugins:
   - jekyll-sitemap
+
+theme: jekyll-theme-hacker
