--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "Chua Cheow Huan"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "An ex glorified storekeeper."
+  bio              : "An ex glorified storekeeper. ML, RL enthusiast."
   location         : "Singapore"
   email            :
   links:
