--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal_mistakes_skin    : dark #"default", "air", "aqua", "contrast", "dark", "
 # Site Settings
 background               : "/assets/images/foggy.jpg"
 locale                   : "en-US"
-title                    : ""
+title                    : "Every little gist"
 title_separator          : "-"
 name                     : "Chua Cheow Huan"
 description              : ""
