--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description              : ""
 url                      : https://chuacheowhuan.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : https://github.com/ChuaCheowHuan # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : "/assets/images/ELG.png" # /assets/images/foggy.jpg # path of fallback teaser image, e.g. "/assets/images/500x300.png"
+teaser                   : "/assets/images/blog/ELG.png" # /assets/images/foggy.jpg # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : #"/assets/images/owl_painting.jpg" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
